--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
     <meta charset='utf-8' />
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
 
-    <title>Bokeh Example</title>
+    <title>Running SunPy on Heroku</title>
   </head>
   <body>
-    <p>{{ text }}</p>
+    <p>Running SunPy version {{ text }}</p>
   </body>
 </html>
 
